--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.3.4
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.3
 django-environ==0.4.5
 djangorestframework==3.12.4
+emoji==1.2.0
 gunicorn==20.1.0
+idna==2.10
 Pillow==8.2.0
 psycopg2-binary==2.8.6
 pytz==2021.1
+requests==2.25.1
 sqlparse==0.4.1
+urllib3==1.26.5
