--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cymem==2.0.5
 Django==3.2.3
 django-environ==0.4.5
 djangorestframework==3.12.4
+django-filter==2.1.0
 emoji==1.2.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 gunicorn==20.1.0
