--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ chardet==4.0.0
 click==7.1.2
 cymem==2.0.5
 Django==3.2.3
+django-cors-headers==3.9.0
 django-environ==0.4.5
-djangorestframework==3.12.4
 django-filter==2.1.0
+djangorestframework==3.12.4
 emoji==1.2.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 gunicorn==20.1.0
